pequenas alterações feitas depois da aula

--- a/static_devconnect/pages/perfil.html
+++ b/static_devconnect/pages/perfil.html
@@ -31,7 +31,7 @@
 
 <nav>
 <img id="img-casa" src="../images/icone Casa (4).svg" alt="">
-<img id="img-galeria" src="../images/Galeria (3).svg" alt="">
+<img id="img-galeria" src="../images/Search.svg" alt="">
 <img id="img-usuario" src="../images/Property 1=User 60x.svg" alt="">
 </nav>
 
@@ -42,7 +42,7 @@
     <main>
         <div>
 
- <form action=""></form>
+ <form> </form>
 
         </div>
     </main>
