atualizações pré finalização da tela feed e aprimoramento de cabeçalho

--- a/static_devconnect/pages/feed.html
+++ b/static_devconnect/pages/feed.html
@@ -27,11 +27,106 @@
 
 <body>
     <h1>Tela Feed</h1>
-<header></header>
 
 
+<header id="cabeçalho">                     
+
+<nav> 
+
+<a id="logo-desktop" href="./feed.html"> <img src="../images/Logo tipo_SemfundoMd.svg" alt=""> </a>
+<a id="logo-mobile" href="./feed.html"> <img src="../images/Logo tipo_SemfundoSm.svg" alt=""> </a>
+
+<div class="cabeçalho-ações">
+    <a href="./feed.html"> <img src="../images/icone Casa (4).svg" alt=""> </a>
+    <a href="#"> <img src="../images/Search.svg" alt="logo DevConnect"> </a>
+    <a href="./perfil.html"> <img id="foto-perfil" src="../images/images.jpg" alt=""> </a>
+</div>
+
+</nav>
+
+</header>
+
+<main>
+
+<div class="container-flex-publi">
+
+<nav class="storys" id="formulario">
+
+    <article class="cardstory">
+     <a href="#"> <img id="foto-feed" src="../images/transferir.jpg" alt=""> <span>Calango_</span> </a>
+    </article>
+
+    <article class="cardstory">
+    <a href="#"> <img id="foto-feed" src="../images/transferir (1).jpg" alt=""> <span>zerao@official</span> </a>
+    </article>
+
+    <article class="cardstory">
+     <a href="#"> <img id="foto-feed" src="../images/transferir (2).jpg" alt=""> <span>@GaLaXY</span> </a>
+    </article>
+
+    <article class="cardstory">
+     <a href="#"> <img id="foto-feed" src="../images/channels4_profile.jpg" alt=""> <span>Alanzoka_Nextstage</span> </a>
+    </article>
+
+    <article class="cardstory">
+     <a href="#"> <img id="foto-feed" src="../images/29668a42-6969-48c5-9f67-467681b5720a-profile_image-300x300.png" alt=""> <span>CappucinoMafios0</span> </a>
+    </article>
+
+    <article class="cardstory">
+        <a href="#"> <img id="foto-feed" src="../images/images (1).jpg" alt=""> <span>@MrFall_</span> </a>
+    </article>
+
+
+
+    <article class="cardstory">
+        <a href="#"> <img id="foto-feed" src="../images/transferir.jpg" alt=""> <span>Calango_</span> </a>
+       </article>
+   
+       <article class="cardstory">
+       <a href="#"> <img id="foto-feed" src="../images/transferir (1).jpg" alt=""> <span>zerao@official</span> </a>
+       </article>
+   
+       <article class="cardstory">
+        <a href="#"> <img id="foto-feed" src="../images/transferir (2).jpg" alt=""> <span>@GaLaXY</span> </a>
+       </article>
+   
+       <article class="cardstory">
+        <a href="#"> <img id="foto-feed" src="../images/channels4_profile.jpg" alt=""> <span>Alanzoka_Nextstage</span> </a>
+       </article>
+   
+       <article class="cardstory">
+        <a href="#"> <img id="foto-feed" src="../images/29668a42-6969-48c5-9f67-467681b5720a-profile_image-300x300.png" alt=""> <span>CappucinoMafios0</span> </a>
+       </article>
+   
+       <article class="cardstory">
+           <a href="#"> <img id="foto-feed" src="../images/images (1).jpg" alt=""> <span>@MrFall_</span> </a>
+       </article>
+
+
+</nav>
+
+
+<Section class="publicar" id="formulario">
+
+<h2>publicar</h2>
+
+<form>
+<textarea name="" id="escrever-texto"></textarea>
+</form>
+
+<div>
+
+    <label class="formulario-imput-file" for="upload-imagem">Faça o upload da sua imagem aqui</label>
+    <input type="file" name="" id="upload-imagem">
+
+    <button type="submit" class="formulario-botao-azul">Postar</button>
+
+</div>
+
+
+</Section>
+
+</div>
+</main>
 </body>
-
-
-
 </html>
